@@ -1,3 +1,7 @@
+2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/menu.test: menu tests using 'tkwait visibility' are unix only.
+
 2010-01-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixEvent.c (TransferXEventsToTcl): [Bug 1924761]: Use the
